public/master.css
/* ... */
.pr0 {
  padding-right: 4px;
}
.pr1 {
  padding-right: 8px;
}
.pr2 {
  padding-right: 16px;
}
.pr3 {
  padding-right: 24px;
}
.pr4 {
  padding-right: 32px;
}
.pr5 {
  padding-right: 40px;
}
.pr6 {
  padding-right: 48px;
}
.pr7 {
  padding-right: 56px;
}
.pr8 {
  padding-right: 64px;
}
.pr9 {
  padding-right: 72px;
}
.pr10 {
  padding-right: 80px;
}
.op50 {
  opacity: 0.5;
}
.op30 {
  opacity: 0.3;
}
.bbg {
  border-bottom: 1px solid #f2f2f2;
}
html {
  min-height: 100%;
}
* {
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -webkit-font-smoothing: antialiased;
  font-smoothing: antialiased;
  box-sizing: border-box;
}
body {
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  margin: 0;
  background: #fff;
  padding-bottom: 10vw;
  font-family: CircularStdBook, Arial, sans-serif;
}
.hidden {
  display: none;
  opacity: 0;
}
.StylesContainer {
  padding: 50px;
  background-color: #faf9f7;
}
.ContentContainer {
  top: 50px;
  position: absolute;
  background: #fff;
  width: 100%;
  height: calc(100vh - 50px);
}
.ContentContainer.Active {
  z-index: 800;
}
.Icon {
  width: 24px;
  height: 24px;
  background-repeat: no-repeat;
  background-size: 100%;
  background-position: center center;
}
.IconHeartLight {
  background-image: url("_img/_icon/light/heart.svg");
}
.IconHeartDark {
  background-image: url("_img/_icon/dark/heart.svg");
}
.IconPlusLight {
  background-image: url("_img/_icon/light/plus.svg");
}
.IconPlusDark {
  background-image: url("_img/_icon/dark/plus.svg");
}
.IconArrowDropDownLight {
  background-image: url("_img/_icon/light/arrow_drop_down.svg");
}
.IconArrowDropDownDark {
  background-image: url("_img/_icon/dark/arrow_drop_down.svg");
}
.IconChevronLeftLight {
  background-image: url("_img/_icon/light/chevron_left.svg");
}
.IconChevronLeftDark {
  background-image: url("_img/_icon/dark/chevron_left.svg");
}
.IconGearLight {
  background-image: url("_img/_icon/light/gear.svg");
}
.IconGearDark {
  background-image: url("_img/_icon/dark/gear.svg");
}
.IconPersonLight {
  background-image: url("_img/_icon/light/person.svg");
}
.IconPersonDark {
  background-image: url("_img/_icon/dark/person.svg");
}
.IconPlaceLight {
  background-image: url("_img/_icon/light/place.svg");
}
.IconPlaceDark {
  background-image: url("_img/_icon/dark/place.svg");
}
.IconSearchLight {
  background-image: url("_img/_icon/light/search.svg");
}
.IconSearchDark {
  background-image: url("_img/_icon/dark/search.svg");
}
.IconStarLight {
  background-image: url("_img/_icon/light/star.svg");
}
.IconStarDark {
  background-image: url("_img/_icon/dark/star.svg");
}
.AppNav {
  background: #fff;
  border-top: 1px solid #f2f2f2;
  font-size: 0.8rem;
  height: 50px;
  width: 100vw;
  position: fixed;
  top: 0;
  margin: 0;
  padding: 0;
  z-index: 900;
}
.AppNav a {
  color: #000;
}
ul {
  margin: 0;
  padding: 0;
}
.AppNav ul {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  list-style: none;
  padding: 18px 24px 16px 24px;
}
.AppNavAccount {
  background: url("_img/_icon/light/person.svg") no-repeat;
  background-size: 100%;
  background-position: center center;
  height: 16px;
  width: 16px;
  text-indent: -9999px;
}
.ActiveTab {
  font-weight: bold;
  opacity: 1;
}
.NavItem {
  font-size: 0.9rem;
}
.FeatureLabel {
  position: relative;
  top: 2.3rem;
  color: #000;
  max-width: 95%;
}
.BankInfo {
  font-size: 0.86rem;
  margin-top: 2rem;
  position: relative;
}
.ButtonSearch {
  background: url("_img/_icon/dark/search.svg") no-repeat;
  height: 24px;
  width: 24px;
  position: relative;
  top: -2.5rem;
  left: 78%;
  text-indent: -9999px;
}
.BankInfoAmt {
  position: relative;
  top: -1rem;
  left: 80%;
}
.FontSizeSm {
  font-size: 0.8rem;
}
body {
  padding: 0;
}
.LogInContainer {
  background: #f00;
  height: 100vh;
  width: 100vw;
  position: relative;
  top: -5px;
  background-image: linear-gradient(160deg, #ff6100, #ff000d, #500072);
}
.LogInGreetingContainer {
  height: 20%;
  position: relative;
  top: 25vh;
  text-align: center;
  padding: 1rem;
}
.LogInGreeting {
  color: #fff;
  font-size: 2.7rem;
  font-family: 'CircularStdBlack', san-serif;
  line-height: 125%;
  padding: 0;
  margin: 0;
  text-align: center;
}
.ButtonLogIn,
.ButtonSignUp {
  display: block;
  -webkit-appearance: none;
  border: none;
  outline: none;
  background: transparent;
}
.ButtonLogin {
  position: relative;
  top: 35%;
}
.ButtonSignUp {
  position: relative;
  top: 38%;
}
.SignUpCTA {
  font-size: 0.7rem;
  height: 7%;
  width: 60%;
  position: relative;
  top: 33%;
  text-align: center;
  margin: 0 auto;
  color: #fff;
}
.LogInDividerContainer {
  height: 1px;
  position: relative;
  top: 35%;
  opacity: 0.5;
}
.LogInDivider {
  border-bottom: 1px solid #fff;
  margin: 0 auto;
  height: 1px;
  width: 60%;
}
.LogInCTA {
  font-size: 0.7rem;
  height: 7%;
  margin: 0 auto;
  position: relative;
  top: 37%;
  text-align: center;
  color: #fff;
}
.LogInAboutCasey {
  font-size: 0.9rem;
  text-align: center;
  position: relative;
  top: 58%;
}
.LogInAboutCasey a {
  color: #fff;
  opacity: 0.5;
}
.LogInFormContainer {
  position: relative;
  top: 40%;
}
.LogInForm {
  background: #808080;
  margin: 0 auto;
  position: relative;
  width: 90%;
}
input[type=text],
input[type=password] {
  height: 2.8rem;
  width: 100%;
  font-size: 0.9rem;
}
input[type=text] {
  border: 0;
  border-bottom: 1px solid #ccc;
}
input:focus {
  outline: none;
}
.InputPadding {
  padding: 1rem;
}
.PasswordHelp {
  position: relative;
  top: 42%;
  height: 2rem;
  text-align: center;
}
.PasswordHelp a {
  color: #fff;
  font-size: 0.85rem;
}
.ButtonShowPassword {
  background: url("_img/_icon/dark/eye.svg") no-repeat;
  background-position: center center;
  background-size: 100%;
  border: none;
  cursor: pointer;
  display: block;
  height: 1.3rem;
  width: 1.3rem;
  text-indent: -99999px;
  opacity: 0.1;
  position: absolute;
  top: 64%;
  right: 10%;
  z-index: 9;
}
/* ... */

